added classes and logic to create marker on map when user submits form data

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             </div>
             <div class="form__row">
                 <label class="form__label">Distance</label>
-                <input class="form__input form__input--distance" placeholder="km"/>
+                <input class="form__input form__input--distance" placeholder="miles"/>
             </div>
             <div class="form__row">
                 <label class="form__label">Duration</label>
-                <input class="form__input form__input--duration" placeholder="min"/>
+                <input class="form__input form__input--duration" placeholder="minutes"/>
             </div>
             <div class="form__row">
                 <label class="form__label">Cadence</label>
-                <input class="form__input form__input--cadence" placeholder="step/min"/>
+                <input class="form__input form__input--cadence" placeholder="steps/min"/>
             </div>
             <div class="form__row form__row--hidden">
                 <label class="form__label">Elev. Gain</label>
@@ -54,17 +54,17 @@
           <div class="workout__details">
             <span class="workout__icon">🏃‍♂️</span>
             <span class="workout__value">5.2</span>
-            <span class="workout__unit">km</span>
+            <span class="workout__unit">miles</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⏱</span>
             <span class="workout__value">24</span>
-            <span class="workout__unit">min</span>
+            <span class="workout__unit">minutes</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⚡️</span>
             <span class="workout__value">4.6</span>
-            <span class="workout__unit">min/km</span>
+            <span class="workout__unit">min/mi</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">🦶🏼</span>
@@ -78,17 +78,17 @@
           <div class="workout__details">
             <span class="workout__icon">🚴‍♀️</span>
             <span class="workout__value">27</span>
-            <span class="workout__unit">km</span>
+            <span class="workout__unit">miles</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⏱</span>
             <span class="workout__value">95</span>
-            <span class="workout__unit">min</span>
+            <span class="workout__unit">minutes</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⚡️</span>
             <span class="workout__value">16</span>
-            <span class="workout__unit">km/h</span>
+            <span class="workout__unit">mph</span>
           </div>
           <div class="workout__details">
             <span class="workout__icon">⛰</span>
