--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Running on April 14</h2>
           <div class="workout__details">
-            <span class="workout__icon">🏃‍♂️</span>
+            <span class="workout__icon">🏃</span>
             <span class="workout__value">5.2</span>
             <span class="workout__unit">miles</span>
           </div>
@@ -76,7 +76,7 @@
         <li class="workout workout--cycling" data-id="1234567891">
           <h2 class="workout__title">Cycling on April 5</h2>
           <div class="workout__details">
-            <span class="workout__icon">🚴‍♀️</span>
+            <span class="workout__icon">🚴‍</span>
             <span class="workout__value">27</span>
             <span class="workout__unit">miles</span>
           </div>
