map view adjusts to the user clicked workout from the sidebar list

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     </ul>
 
     <p class="copyright">
-        &copy; Copyright by
-        <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a>.
-        Use for learning or your portfolio. Don't use to teach. Don't claim as your own.
+        &copy; Project Created by
+        <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> in the Udemy Course: The Complete JavaScript Course.
+        This project is not my own. I followed along and completed this project module portion to use for my own learning.
     </p>
 </div>
 
