workouts submitted by user are saved to local storage. User can also delete all workouts if desired

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
 <div class="sidebar">
     <img src="logo.png" alt="Logo" class="logo"/>
+    <button class="delete__workouts">Click to delete workouts 🗑️</button>
 
     <ul class="workouts">
         <form class="form hidden">
