updated project disclaimer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
     <p class="copyright">
         &copy; Project Created by
         <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> in the Udemy Course: The Complete JavaScript Course.
-        This project is not my own. I followed along and completed this project module portion to use for my own learning.
+        This project is not my own. I followed along and completed this project module portion to use for my own learning. HOWEVER, FEATURES NOT SHOWN IN THE COURSE
+        WERE IMPLEMENTED ON MY OWN.
     </p>
 </div>
 
