minro stlye updates to delete all workouts button

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="style.css"/>
     <!-- Leaflet Map CDN CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
     <!-- Leaflet Map CDN JS -->
-    <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <!-- Custom JS File -->
     <script defer src="script.js"></script>
     <title>Mapty // Map Your Workouts</title>
@@ -20,7 +22,7 @@
 <body>
 <div class="sidebar">
     <img src="logo.png" alt="Logo" class="logo"/>
-    <button class="delete__workouts">Click to delete workouts 🗑️</button>
+    <button class="delete__workouts hidden"><span>Delete Workouts</span></button>
 
     <ul class="workouts">
         <form class="form hidden">
@@ -101,8 +103,10 @@
 
     <p class="copyright">
         &copy; Project Created by
-        <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> in the Udemy Course: The Complete JavaScript Course.
-        This project is not my own. I followed along and completed this project module portion to use for my own learning. HOWEVER, FEATURES NOT SHOWN IN THE COURSE
+        <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> in the
+        Udemy Course: The Complete JavaScript Course.
+        This project is not my own. I followed along and completed this project module portion to use for my own
+        learning. HOWEVER, FEATURES NOT SHOWN IN THE COURSE
         WERE IMPLEMENTED ON MY OWN.
     </p>
 </div>
