working on edit & delete workout functionality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="shortcut icon" type="image/png" href="icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./assets/icon.png"/>
     <!-- Google Fonts API -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet"/>
     <!-- Custom CSS File -->
@@ -16,13 +16,13 @@
     <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
             integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <!-- Custom JS File -->
-    <script defer src="script.js"></script>
+    <script defer src="main.js"></script>
     <title>Mapty // Map Your Workouts</title>
 </head>
 <body>
 <div class="sidebar">
-    <img src="logo.png" alt="Logo" class="logo"/>
-    <button class="delete__workouts hidden"><span>Delete Workouts</span></button>
+    <img src="./assets/logo.png" alt="Logo" class="logo"/>
+    <button class="workouts__modify-delete-all hidden"><span>Delete Workouts</span></button>
 
     <ul class="workouts">
         <form class="form hidden">
