minor updates to variable names. Implementing edit and delete of individual workouts features

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     </ul>
 
     <p class="copyright">
-        &copy; Project Created by
+        &copy; Base Project Created by
         <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> in the
         Udemy Course: The Complete JavaScript Course.
-        This project is not my own. I followed along and completed this project module portion to use for my own
-        learning. HOWEVER, FEATURES NOT SHOWN IN THE COURSE
+        This project is not entirely my own. I followed along and completed this project module portion to use for my own
+        learning. HOWEVER, MANY FEATURES NOT SHOWN IN THE COURSE
         WERE IMPLEMENTED ON MY OWN.
     </p>
 </div>
