--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <!-- Google Fonts API -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet"/>
     <!-- Leaflet Map CDN CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+          integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="./style.css"/>
     <!-- Leaflet Map CDN JS -->
-    <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+    <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+            integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <!-- Custom JS File -->
     <script defer src="./main.js"></script>
     <title>Mapty // Map Your Workouts</title>
@@ -99,18 +101,44 @@
         </li> -->
     </ul>
 
-    <div id="edit-modal" class="edit-modal">
-        <div class="edit-modal-body">
-            <h1>Test</h1>
-            <button onclick="_closeModal()">Close</button>
+    <div class="modal hidden">
+        <div class="modal__header--container">
+            <div class="modal__header--label">Edit Workout</div>
+            <div class="close__modal--btn">X</div>
         </div>
+        <br/>
+        <div class="form__row">
+            <label class="form__label">Type</label>
+            <select class="form__input form__input--type">
+                <option value="running">Running</option>
+                <option value="cycling">Cycling</option>
+            </select>
+        </div>
+        <div class="form__row">
+            <label class="form__label">Distance</label>
+            <input class="form__input form__input--distance" placeholder="miles"/>
+        </div>
+        <div class="form__row">
+            <label class="form__label">Duration</label>
+            <input class="form__input form__input--duration" placeholder="minutes"/>
+        </div>
+        <div class="form__row">
+            <label class="form__label">Cadence</label>
+            <input class="form__input form__input--cadence" placeholder="steps/min"/>
+        </div>
+        <div class="form__row form__row--hidden">
+            <label class="form__label">Elev. Gain</label>
+            <input class="form__input form__input--elevation" placeholder="meters"/>
+        </div>
+        <button class="form__btn">OK</button>
     </div>
 
     <p class="copyright">
         &copy; Base Project Created by
         <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> in the
         Udemy Course: The Complete JavaScript Course.
-        This project is not entirely my own. I followed along and completed this project module portion to use for my own
+        This project is not entirely my own. I followed along and completed this project module portion to use for my
+        own
         learning. HOWEVER, MANY FEATURES NOT SHOWN IN THE COURSE
         WERE IMPLEMENTED ON MY OWN.
     </p>
