implementing edit workout feature - when editing, it's updated on the page and where it's stored - need to update the marker on the map next.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </li> -->
     </ul>
 
-    <div class="modal__edit--workout-form hidden">
+    <form class="modal__edit--workout-form hidden">
         <div class="modal__header--container">
             <div class="modal__header--label">Edit Workout</div>
             <div class="close__modal--btn">X</div>
@@ -132,7 +132,7 @@
             <input class="form__input modal__edit--workout-form-input-elevation" placeholder="meters"/>
         </div>
         <button class="modal__edit--workout-form-btn">Edit</button>
-    </div>
+    </form>
 
     <!--    <p class="copyright">-->
     <!--        &copy; Base Project Created by-->
