updates to sort workouts option

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="sort__workouts hidden">
         <label class="sort__workouts--by-label">Sort Workouts By:</label>
         <select class="sort__workouts--by-options">
-            <option value="distance">Distance</option>
-            <option value="duration">Duration</option>
+            <option value="shortest distance">Shortest Distance</option>
+            <option value="longest distance">Longest Distance</option>
         </select>
     </div>
 
