more updates to sort workouts option

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="sort__workouts hidden">
         <label class="sort__workouts--by-label">Sort Workouts By:</label>
         <select class="sort__workouts--by-options">
+            <option disabled selected value="">Select an Option</option>
             <option value="shortest distance">Shortest Distance</option>
             <option value="longest distance">Longest Distance</option>
         </select>
