minor style edits and added more sort workouts by options

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         <label class="sort__workouts--by-label">Sort Workouts By:</label>
         <select class="sort__workouts--by-options">
             <option disabled selected value="">Select an Option</option>
-            <option value="shortest distance">Shortest Distance</option>
-            <option value="longest distance">Longest Distance</option>
+            <option value="shortest-distance">Shortest Distance</option>
+            <option value="shortest-duration">Shortest Duration</option>
+            <option value="longest-distance">Longest Distance</option>
+            <option value="longest-duration">Longest Duration</option>
         </select>
     </div>
 
