added the capability for the map to position all the markers on the screen

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <button class="new__workout-form-submit-btn">Add</button>
         </form>
-        <!-- <li class="workout workout--running" data-id="1234567890">
+     <!-- <li class="workout workout--running" data-id="1234567890">
           <h2 class="workout__title">Running on April 14</h2>
           <div class="workout__details">
             <span class="workout__icon">🏃</span>
@@ -152,6 +152,8 @@
     </form>
 </div>
 
-<div id="map" class="map"></div>
+<div id="map" class="map">
+    <button id="position__map-to-view-all-markers">View All Markers</button>
+</div>
 </body>
 </html>
